; ModuleID = '/home/carl/AnghaBench/linux/drivers/ata/extr_pata_triflex.c_triflex_prereset.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/ata/extr_pata_triflex.c_triflex_prereset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pci_bits = type { i32, i32, i32, i32 }
%struct.ata_link = type { %struct.ata_port* }
%struct.ata_port = type { i64, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }
%struct.pci_dev = type { i32 }

@triflex_prereset.triflex_enable_bits = internal constant [2 x %struct.pci_bits] [%struct.pci_bits { i32 128, i32 1, i32 1, i32 1 }, %struct.pci_bits { i32 128, i32 1, i32 2, i32 2 }], align 16
@ENOENT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ata_link*, i64)* @triflex_prereset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @triflex_prereset(%struct.ata_link* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.ata_link*, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.ata_port*, align 8
  %7 = alloca %struct.pci_dev*, align 8
  store %struct.ata_link* %0, %struct.ata_link** %4, align 8
  store i64 %1, i64* %5, align 8
  %8 = load %struct.ata_link*, %struct.ata_link** %4, align 8
  %9 = getelementptr inbounds %struct.ata_link, %struct.ata_link* %8, i32 0, i32 0
  %10 = load %struct.ata_port*, %struct.ata_port** %9, align 8
  store %struct.ata_port* %10, %struct.ata_port** %6, align 8
  %11 = load %struct.ata_port*, %struct.ata_port** %6, align 8
  %12 = getelementptr inbounds %struct.ata_port, %struct.ata_port* %11, i32 0, i32 1
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call %struct.pci_dev* @to_pci_dev(i32 %15)
  store %struct.pci_dev* %16, %struct.pci_dev** %7, align 8
  %17 = load %struct.pci_dev*, %struct.pci_dev** %7, align 8
  %18 = load %struct.ata_port*, %struct.ata_port** %6, align 8
  %19 = getelementptr inbounds %struct.ata_port, %struct.ata_port* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = getelementptr inbounds [2 x %struct.pci_bits], [2 x %struct.pci_bits]* @triflex_prereset.triflex_enable_bits, i64 0, i64 %20
  %22 = call i32 @pci_test_config_bits(%struct.pci_dev* %17, %struct.pci_bits* %21)
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %27, label %24

24:                                               ; preds = %2
  %25 = load i32, i32* @ENOENT, align 4
  %26 = sub nsw i32 0, %25
  store i32 %26, i32* %3, align 4
  br label %31

27:                                               ; preds = %2
  %28 = load %struct.ata_link*, %struct.ata_link** %4, align 8
  %29 = load i64, i64* %5, align 8
  %30 = call i32 @ata_sff_prereset(%struct.ata_link* %28, i64 %29)
  store i32 %30, i32* %3, align 4
  br label %31

31:                                               ; preds = %27, %24
  %32 = load i32, i32* %3, align 4
  ret i32 %32
}

declare dso_local %struct.pci_dev* @to_pci_dev(i32) #1

declare dso_local i32 @pci_test_config_bits(%struct.pci_dev*, %struct.pci_bits*) #1

declare dso_local i32 @ata_sff_prereset(%struct.ata_link*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
